firebase and button updates

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,3 +26,9 @@
 	color: white;
 	background-color: #629466;
 }
+
+#jumboHeader {
+	text-align: center;
+	margin: 0 auto;
+	background-color: #629466;
+}
